--- a/BookAnalysisNotebook/nlp_book_analysis.ipynb
+++ b/BookAnalysisNotebook/nlp_book_analysis.ipynb
@@ -2,17 +2,53 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "5ccd2d92-40a0-4d2d-a989-5c915aa3cebb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re"
+    "import re\n",
+    "import nltk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
+   "id": "59ec2a20-f4f9-4978-8bba-03696b0d5571",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\acohal\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package vader_lexicon to\n",
+      "[nltk_data]     C:\\Users\\acohal\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Preparatory steps - must be executed only once\n",
+    "nltk.download('stopwords')\n",
+    "nltk.download('vader_lexicon')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "01094f90-4265-494f-9d35-48df9079ce21",
    "metadata": {},
    "outputs": [],
@@ -30,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "id": "6e64e0d2-006c-49eb-a74a-5f5705aa2849",
    "metadata": {},
    "outputs": [],
@@ -49,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "154a6dbf-ad87-4233-a43e-ea97d2516765",
    "metadata": {},
    "outputs": [
@@ -68,7 +104,7 @@
        " (1169, 'my')]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,67 +125,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ae21e9eb-4db4-4bca-83de-c1737643680b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"\"\"\n",
-    "    Step 1: In command line in the root folder: pip3.13 install nltk\n",
-    "    Step 2: In a cell in this Jupyter Notebook:\n",
-    "        import nltk\n",
-    "        nltk.download('stopwords')\n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "id": "d9442a43-3b4b-48aa-94fe-7e0f9838461a",
+   "execution_count": 8,
+   "id": "13a078ab-2647-45db-bc29-894363d2b204",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\acohal\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n",
-      "[nltk_data] Downloading package vader_lexicon to\n",
-      "[nltk_data]     C:\\Users\\acohal\\AppData\\Roaming\\nltk_data...\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "True"
+       "['a', 'about', 'above', 'after', 'again', 'against', 'ain', 'all', 'am', 'an']"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import nltk\n",
-    "nltk.download('stopwords')\n",
-    "nltk.download('vader_lexicon')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "13a078ab-2647-45db-bc29-894363d2b204",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from nltk.corpus import stopwords\n",
-    "english_stopwords = stopwords.words(\"english\")"
+    "english_stopwords = stopwords.words(\"english\")\n",
+    "english_stopwords[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "926fc330-6aca-4e8a-917f-a27359967536",
    "metadata": {},
    "outputs": [
@@ -168,7 +167,7 @@
        " 'like']"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,12 +185,12 @@
    "id": "80080e73-556c-496d-8d03-fd6573304f6a",
    "metadata": {},
    "source": [
-    "# Sentiment analysis: The most positive and most negitive chapter"
+    "# Sentiment analysis: How positive and how negative is each chapter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "67914413-a9c7-45be-adda-65d401df190a",
    "metadata": {},
    "outputs": [],
@@ -201,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 17,
    "id": "69865c22-ffac-4b22-85da-8f24420a0db6",
    "metadata": {},
    "outputs": [],
@@ -213,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "id": "e2103194-a75a-45ea-bb83-da0e9d68bd0f",
    "metadata": {},
    "outputs": [],
@@ -223,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "id": "c0ebeed5-f695-4a26-8251-1880b0742adc",
    "metadata": {},
    "outputs": [
@@ -231,23 +230,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'neg': 0.061, 'neu': 0.779, 'pos': 0.16, 'compound': 1.0}\n",
-      "{'neg': 0.12, 'neu': 0.726, 'pos': 0.154, 'compound': 0.9991}\n",
-      "{'neg': 0.145, 'neu': 0.751, 'pos': 0.105, 'compound': -0.9999}\n",
-      "{'neg': 0.141, 'neu': 0.721, 'pos': 0.138, 'compound': -0.9963}\n",
-      "{'neg': 0.118, 'neu': 0.742, 'pos': 0.141, 'compound': 0.9997}\n",
-      "{'neg': 0.124, 'neu': 0.761, 'pos': 0.115, 'compound': -0.9979}\n",
-      "{'neg': 0.136, 'neu': 0.761, 'pos': 0.103, 'compound': -0.9999}\n",
-      "{'neg': 0.12, 'neu': 0.786, 'pos': 0.094, 'compound': -0.9998}\n",
-      "{'neg': 0.097, 'neu': 0.824, 'pos': 0.079, 'compound': -0.9996}\n",
-      "{'neg': 0.086, 'neu': 0.733, 'pos': 0.181, 'compound': 1.0}\n"
+      "Chapter 1\n",
+      "\tNegative score: 0.061\n",
+      "\tNeutral score: 0.061\n",
+      "\tPositive score: 0.061\n",
+      "\tOverall sentiment: Positive\n",
+      "Chapter 2\n",
+      "\tNegative score: 0.12\n",
+      "\tNeutral score: 0.12\n",
+      "\tPositive score: 0.12\n",
+      "\tOverall sentiment: Positive\n",
+      "Chapter 3\n",
+      "\tNegative score: 0.145\n",
+      "\tNeutral score: 0.145\n",
+      "\tPositive score: 0.145\n",
+      "\tOverall sentiment: Negative\n",
+      "Chapter 4\n",
+      "\tNegative score: 0.141\n",
+      "\tNeutral score: 0.141\n",
+      "\tPositive score: 0.141\n",
+      "\tOverall sentiment: Negative\n",
+      "Chapter 5\n",
+      "\tNegative score: 0.118\n",
+      "\tNeutral score: 0.118\n",
+      "\tPositive score: 0.118\n",
+      "\tOverall sentiment: Positive\n",
+      "Chapter 6\n",
+      "\tNegative score: 0.124\n",
+      "\tNeutral score: 0.124\n",
+      "\tPositive score: 0.124\n",
+      "\tOverall sentiment: Negative\n",
+      "Chapter 7\n",
+      "\tNegative score: 0.136\n",
+      "\tNeutral score: 0.136\n",
+      "\tPositive score: 0.136\n",
+      "\tOverall sentiment: Negative\n",
+      "Chapter 8\n",
+      "\tNegative score: 0.12\n",
+      "\tNeutral score: 0.12\n",
+      "\tPositive score: 0.12\n",
+      "\tOverall sentiment: Negative\n",
+      "Chapter 9\n",
+      "\tNegative score: 0.097\n",
+      "\tNeutral score: 0.097\n",
+      "\tPositive score: 0.097\n",
+      "\tOverall sentiment: Negative\n",
+      "Chapter 10\n",
+      "\tNegative score: 0.086\n",
+      "\tNeutral score: 0.086\n",
+      "\tPositive score: 0.086\n",
+      "\tOverall sentiment: Positive\n"
      ]
     }
    ],
    "source": [
-    "for chapter in chapters:\n",
+    "for number, chapter in enumerate(chapters):\n",
     "    scores = analyzer.polarity_scores(chapter)\n",
-    "    print(scores)"
+    "    print(\"Chapter\", number+1)\n",
+    "    print(\"\\tNegative score:\", scores[\"neg\"])\n",
+    "    print(\"\\tNeutral score:\", scores[\"neg\"])\n",
+    "    print(\"\\tPositive score:\", scores[\"neg\"])\n",
+    "\n",
+    "    if scores[\"compound\"] > 0.05:\n",
+    "        print(\"\\tOverall sentiment: Positive\")\n",
+    "    elif scores[\"compound\"] < -0.05:\n",
+    "        print(\"\\tOverall sentiment: Negative\")\n",
+    "    else:\n",
+    "        print(\"\\tOverall sentiment: Neutral\")"
    ]
   },
   {
