--- a/BookAnalysisNotebook/regex_book_analysis.ipynb
+++ b/BookAnalysisNotebook/regex_book_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "5e8febb3-059c-4313-91a1-8e94b7333713",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "10a498fa-732e-49ce-9994-616f4e4c23a8",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "25968439-713d-4c5a-b7a9-3650129510e9",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "3e48bbab-e556-4934-9469-703c2a528c88",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
        " 'Chapter 10']"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "7106f43c-715d-45d2-ab70-3f2d20e6e506",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
        "10"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "id": "1764e45d-158a-49a2-bc28-e3caae734d07",
    "metadata": {},
    "outputs": [
@@ -126,67 +126,10 @@
        " 'The house had a beautiful view of the sea, and this more than anything made my mother love it.',\n",
        " 'She was a true tower of strength, but her strength was always based in warmth and love and because of her love and protection I grew up believing the world was a safe, familiar place.',\n",
        " 'He had given us a life of comfort and privilege such as his own father never could have imagined, he had provided for us and protected us in the best way he could, and though he was not an emotionally expressive man, he always showed his love for us subtly, quietly, and in ways that were true to the man he was.',\n",
-       " 'Out of love for his family he had arranged in his mind a future that would keep us all safe, happy, and always together.',\n",
-       " 'Susy shared my mother’s love for the closeness of family, but she was no stay-at-home girl.',\n",
-       " 'When she was sixteen she spent a year as an exchange student living with a family in Florida, an experience that taught her to love the U.',\n",
-       " 'Take care of the people you love. The words inspired nothing in me but a black sense of loss.',\n",
-       " 'As I lay beside her, the sweetness of my love for her, for my lost friends and my family, for the suddenly fragile notion of my own life and future, swelled in my heart with an ache so profound it sapped all my strength, and for a moment I thought I would pass out.',\n",
-       " 'I pressed my cheek against hers so I could feel her warm breath on my face, and held her that way all night, gently, but very close, never letting go, embracing her as if I were embracing all the love and peace and joy I had ever known and would ever know; as if by holding on tight I could keep everything precious from slipping away.',\n",
-       " 'I felt my love for my father tugging at me like a lifeline, drawing me toward those barren slopes.',\n",
-       " 'In the days after Susy died, my love for my father was the only thing that kept me sane, and time after time I would calm myself by reaffirming the promise I had made at Susy’s grave: to return to him; to show him I had survived and to ease his suffering a little.',\n",
-       " 'Thinking of my father this way always triggered in me a burst of love so radiant and urgent that it took my breath away.',\n",
-       " 'I don’t pray to God for forgiveness or favors, I only pray to be closer to Him, and when I pray, I fill my heart with love. When I pray this way, I know that God is love.',\n",
-       " 'When I feel that love, I remember that we don’t need angels or a heaven, because we are a part of God already.',\n",
-       " 'Bobby, are you warm enough? Do you want me to rub your feet?” She worried constantly about the children she had left at home, but still she had the courage and love to mother these frightened boys who were so far from their families.',\n",
-       " 'It was our job to follow His commandments, to take the sacraments, to love God and to love others as Jesus had taught us.',\n",
-       " 'I would think of him and let my heart fill with love for him, and this love would be stronger than my suffering, or my fear.',\n",
-       " 'After two weeks on the mountain, my love for my father had taken on the irresistible power of a biological drive.',\n",
-       " 'All we can do is love God and love others and trust in God’s will.',\n",
-       " 'I can feel His love, Nando.',\n",
-       " 'There’s so much love, I want to cry.',\n",
-       " 'Even if we are trapped here forever, we can love our families, and God, and each other as long as we live.',\n",
-       " 'You will tell my family that I love them, won’t you? That’s all that matters to me now.',\n",
-       " 'But he lived so many lifetimes, had so many adventures, and, macho, he made love to so many beautiful girls.',\n",
-       " 'The shoes were magical for me because my mother had chosen them with such love for her grandson, and had handled them so tenderly on the plane.',\n",
-       " 'My love for my father swelled in my heart, and I realized that, despite the hopelessness of my situation, the memory of him filled me with joy.',\n",
-       " 'They could not crush my ability to love. I felt a moment of calmness and clarity, and in that clarity of mind I discovered a simple, astounding secret: Death has an opposite, but the opposite is not mere living.',\n",
-       " 'The opposite of death is love. How had I missed that? How does anyone miss that? Love is our only weapon.',\n",
-       " 'Only love can turn mere life into a miracle, and draw precious meaning from suffering and fear.',\n",
-       " 'I would walk through the godforsaken country that separated me from my home with love and hope in my heart.',\n",
-       " 'I’ve never been in love.”\\n\\n“Really?” he laughed.',\n",
-       " 'But still, still, I longed for the very things I knew I would never have—the love of a wife, a family of my own, a reunion with my grandmother and older sister, and always the embrace of my father.',\n",
-       " 'My ordeal had simplified my mind and whittled me down very close to the essence of what I was, and now I saw that this longing, this love and affection for the very idea of my life, was a deeper part of me than hopelessness or fear or pain or hunger.',\n",
-       " 'In seconds she was in my arms, and my heart swelled with love as I held her.',\n",
-       " 'There was so much I wanted to tell him, that I had thought of him every moment, that his love had been the guiding light that led me to safety.',\n",
-       " 'The papers called our return “The Christmas Miracle,” and many people were regarding us as almost mystical figures: young boys who had been saved by the direct intercession of God, living proof of His love. News of our survival was making headlines around the globe, and public interest was intense.',\n",
-       " 'Where should I begin? “I love it,” I said, finally.',\n",
-       " 'I tried to be on my best behavior, but already I was madly in love, and it required all my effort to take my eyes off Veronique, and to remind myself there was anyone else in the room.',\n",
-       " 'She stepped off the train with only a backpack and a small duffel, looking very beautiful, and I fell in love with her all over again.',\n",
-       " 'Until then, I had thought I could never love anything as much as I loved my wife, but when I gazed into my baby’s face, I was struck senseless by my love for her.',\n",
-       " 'I felt a sudden, staggering sense of gratitude for the rich joys of my life—I had been given so much love and happiness—and I realized that every grueling step I had taken through that godforsaken wilderness was a step toward the tiny, precious miracle I held in my arms.',\n",
-       " 'We are bonded by our suffering and our losses, but also by a great sense of mutual respect and, of course, a deep, unquestioned love. I don’t know if my father has ever understood how important he was to me when I was lost.',\n",
-       " 'Mostly, he saved me with his love. He was never an openly affectionate man, but I never doubted his love when I was a boy.',\n",
-       " 'It was quiet love, but solid and deep and enduring.',\n",
-       " 'When I was in the mountains, stranded in the shadows of death, that love was like a safety line anchored in the world of the living.',\n",
-       " 'As long as I held on to that love, I was not lost, I was connected to my home and to my future, and in the end it was that strong cord of love that led me out of danger.',\n",
-       " 'He saved me simply by being the father I love.\\n\\n\\nWHEN MY FELLOW survivors and I first returned from the mountains, our parents and teachers, worried that we’d been scarred by the horrors we’d faced, asked us to visit a therapist.',\n",
-       " 'There was love, the love in my heart, and for one incredible moment, as I felt this love swell—love for my father, for my future, for the simple wonder of being alive—death lost its power.',\n",
-       " 'Instead, I made every step a step toward love, and that saved me.',\n",
-       " 'I have never stopped moving toward love. Life has blessed me with material success.',\n",
-       " 'I love to travel.',\n",
-       " 'I believe life should be enjoyed, but my experiences have taught me that without the love of my family and my friends, all the trappings of worldly success would ring hollow.',\n",
-       " 'I also know that I would be a happy man if all those trappings were taken from me, as long as I am close to the people I love.\\n\\nI expect most people would like to think of themselves this way, but I know that if I had not suffered as I did, and had not been forced to stare death in the face, I would not treasure the simple, precious pleasures of my life as richly as I do.',\n",
-       " 'I savor them and let each one become a miniature eternity, and by living these small moments of my life so fully, I defy the shadow of death that hovers over all of us, I reaffirm my love and gratitude for all the gifts I’ve been given, and I fill myself more and more deeply with life.',\n",
-       " 'It seemed to reach me through my own feelings of love, and I have often thought that when we feel what we call love, we are really feeling our connection to this awesome presence.',\n",
-       " 'Instead, I imagine love, an ocean of love, the very source of love, and I imagine myself merging with it.',\n",
-       " 'I open myself to it, I try to direct that tide of love toward the people who are close to me, hoping to protect them and bind them to me forever and connect us all to whatever there is in the world that is eternal.',\n",
-       " 'In the mountains, it was love that kept me connected to the world of the living.',\n",
-       " 'I had no expertise to draw on, so I relied upon the trust I felt in my love for my father and my future, and that trust led me home.',\n",
-       " 'Now I am convinced that if there is something divine in the universe, the only way I will find it is through the love I feel for my family and my friends, and through the simple wonder of being alive.',\n",
-       " 'I don’t need any other wisdom or philosophy than this: My duty is to fill my time on earth with as much life as possible, to become a little more human every day, and to understand that we only become human when we love. I have tried to love my friends with a loyal and generous heart.']"
+       " 'Out of love for his family he had arranged in his mind a future that would keep us all safe, happy, and always together.']"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,12 +145,12 @@
     "\"\"\"\n",
     "pattern = re.compile(\"[A-Z]{1}[^.]*[^a-zA-Z]+love[^a-zA-Z]+[^.]*.\")\n",
     "findings = re.findall(pattern, book)\n",
-    "findings"
+    "findings[:10]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "id": "38c23abb-d95f-440b-a2ac-7f48471a3470",
    "metadata": {},
    "outputs": [
@@ -217,7 +160,7 @@
        "67"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 8,
    "id": "75a1fb70-24b4-4327-bd5d-8721017a76b1",
    "metadata": {},
    "outputs": [
@@ -255,7 +198,7 @@
        " 'we']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "id": "7e020a0c-05f6-491d-b5c8-246b8d1c120a",
    "metadata": {},
    "outputs": [
@@ -278,7 +221,7 @@
        "86798"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "id": "344e04d2-6493-4d35-aa58-f8a7ccbbb516",
    "metadata": {},
    "outputs": [],
@@ -304,19 +247,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "id": "159c3c8e-d005-4b6f-b95b-d226e0604fc4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "list_words = [(value, key) for (key, value) in dictionary_words.items()]\n",
-    "list_words = sorted(list_words, reverse=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "36919824-baa8-4546-8acd-578197e42556",
    "metadata": {},
    "outputs": [
     {
@@ -334,12 +266,15 @@
        " (1169, 'my')]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Convert from dictionary to list of tuples in order to be able to sort it\n",
+    "list_words = [(value, key) for (key, value) in dictionary_words.items()]\n",
+    "list_words = sorted(list_words, reverse=True)\n",
     "list_words[:10]"
    ]
   },
@@ -353,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "id": "5c35c979-85a6-43e2-b7e4-a1fd68efd6dd",
    "metadata": {},
    "outputs": [
@@ -365,7 +300,7 @@
        " 'I always laughed when he talked this way, but I could not ignore the hidden streak of anger and sadness that those questions revealed. I did not judge him for this, because I knew it was all the result of a broken heart. Panchito’s parents had divorced when he was fourteen years old. It was a disaster that had wounded him in ways he could not heal and had left him with much resentment. He had two brothers, and a stepbrother from his father’s previous marriage, but still, there was something missing for him. I believe he had a great hunger for the love and comforts of a family that was happy and whole. In any case, it did not take me long to realize that despite all the natural gifts he had been blessed with, all the things I envied him for, he envied me more for the one thing I had that he could only dream of—my sisters, my grandmother, my mother and father, all of us together in a close and happy home.']"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "id": "872d1436-4086-4133-b128-e7ae67338215",
    "metadata": {},
    "outputs": [
@@ -388,7 +323,7 @@
        "60"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -406,8 +341,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7350c3b3-36ae-4a05-86e3-2077e1b81807",
+   "metadata": {},
+   "source": [
+    "## Method 1"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 15,
    "id": "e1196c4c-13d5-47e4-9f49-b6a8f5b73d6e",
    "metadata": {},
    "outputs": [
@@ -426,7 +369,7 @@
        " 'After']"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +383,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
+   "id": "2e1e40a7-06c2-49f7-a106-62e534245309",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Method 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "9102dcc2-4374-46f2-831e-aba1f55a8e45",
    "metadata": {},
    "outputs": [
@@ -459,7 +412,7 @@
        " 'After']"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 18,
    "id": "5cd97489-bbff-460f-8eba-ce0ca1e8f1ca",
    "metadata": {},
    "outputs": [],
@@ -496,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 19,
    "id": "d2b0f423-2dce-4e2a-9416-d955812d24c4",
    "metadata": {},
    "outputs": [
@@ -506,7 +459,7 @@
        "83"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 21,
    "id": "38a749d5-3ef2-4c55-a7d7-3297536c73d9",
    "metadata": {},
    "outputs": [
@@ -527,7 +480,7 @@
        "\"The book does not contain the word 'hate'\""
       ]
      },
-     "execution_count": 60,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28c79012-79a3-428e-99f5-7d60d507cb55",
+   "id": "23049a7c-2d2d-4f64-b2de-68e8645129ec",
    "metadata": {},
    "outputs": [],
    "source": []
